apps/glance/glance.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: glance
spec:
  selector:
    matchLabels:
      app: glance
  template:
    metadata:
      labels:
        app: glance
    spec:
      volumes:
      - name: config
        configMap:
         name: glance-config
      containers:
      - name: glance
        image: glanceapp/glance:v0.8.6
        volumeMounts:
        - name: config
          mountPath: /app/config/glance.yml
          subPath: glance.yml
        ports:
        - name: web
          containerPort: 8080
        resources:
          limits:
            cpu: 100m
            memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: glance
spec:
  ports:
  - name: web
    port: 8080
    targetPort: web
  selector:
    app: glance
