apps/glance/cloudflared.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: glance-cloudflared
spec:
  ingressClassName: cloudflare-tunnel
  rules:
  - host: glance.btrcloud.com
    http:
      paths:
      - backend:
          service:
            name: glance
            port:
              number: 8080
        path: /
        pathType: Prefix
