apps/glance/funnel.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: glance
  namespace: glance
  annotations:
    tailscale.com/funnel: "true"
spec:
  defaultBackend:
    service:
      name: glance
      port:
        number: 8080
  ingressClassName: tailscale
  tls:
    - hosts:
        - glance
