apps/glance/httproutes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: glance
spec:
  hostnames:
  - glance.menia.cc
  parentRefs:
  - name: shared-gateway
    namespace: default
  rules:
  - backendRefs:
    - name: glance
      port: http
    matches:
    - path:
        type: PathPrefix
        value: /
